# after-you

./: .gitignore  CHANGELOG.md  README.md  config_user.json  install_update.bat  install_update_Windows.bat  install_update_macOS_linux.sh  pyproject.toml  start_app_Windows.bat  start_app_macOS_linux.sh  webui.py
.streamlit/: config.toml
afteryou/: __init__.py  config.py  const.py  db_manager.py  embed_manager.py  file_utils.py  install_setting.py  llm.py  lock.py  logger.py  routine.py  static.py  summary.py  sys_path.py  update_routine.py  utils.py  web_component.py
afteryou/src/: about_en.md  character.csv  config_default.json  mail_character.csv  mail_welcome.md  style.css
afteryou/ui/: daily.py  mailbox.py  search.py  setting.py
cache/: cache_dict.json  test.json
