[tool.poetry]
name = "afteryou"
version = "0.0.1"
description = "Your proactive AI diary, recording moods and musings, responding to your heart's call"
authors = ["antonoko <antonoko@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.31.1"
pre-commit = "^3.6.2"
openai = "^1.13.3"
uform = "^1.1.1"
faiss-cpu = "^1.8.0"
lunardate = "^0.2.2"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
