[tool.poetry]
name = "afteryou"
version = "0.0.6"
description = "Your proactive AI diary, recording moods and musings, responding to your heart's call"
authors = ["antonoko <antonoko@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.31.1"
pre-commit = "^3.6.2"
openai = "^1.13.3"
uform = "^1.1.1"
faiss-cpu = "^1.8.0"
lunardate = "^0.2.2"
opencv-python = "^4.9.0.80"
emoji = "^2.10.1"
textblob = "^0.18.0.post0"
langdetect = "^1.0.9"
pydantic = "^2.7.0"
annotated-types = "^0.6.0"
pydantic-core = "^2.18.1"
httpx = "^0.27.0"
h11 = "^0.14.0"
distro = "^1.9.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
